@@ -2,6 +2,7 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942)
+	- Fixed Fluid redraw issue (STR #912)
 	- Added 32bit BMP Image file format support (STR #918)
 	- Value Sliders would not receive focus when clicked on (STR #911)
 	- Added redraw of some widgets to show focus change (STR #910)
